@@ -147,6 +147,7 @@ namespace
 #ifdef TORRENT_USE_OPENSSL
 
 #include <openssl/crypto.h>
+#include <openssl/rand.h>
 
 namespace
 {
